fixes for responsive design and spacing

--- a/Styles/10-Day-Forecast.scss
+++ b/Styles/10-Day-Forecast.scss
@@ -18,7 +18,7 @@ hr {
   // &:hover {
   //   box-shadow: 0px 10px 15px 0px black;      
   // }
-  margin: 0px 40px 40px 40px; 
+  margin: 0px auto 40px; 
   padding: 10px;
   box-sizing: border-box;
   overflow: hidden;
@@ -147,14 +147,6 @@ hr {
   .TenDay {
     .card-container {
       width: 290px;
-    }
-  }
-}
-
-@media screen and (max-width: 410px) {
-  .TenDay {
-    .card-container {
-      width: 145px;
     }
   }
 }
