--- a/Styles/App.scss
+++ b/Styles/App.scss
@@ -14,7 +14,9 @@
   // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f6f6', endColorstr='#f5f6f6',GradientType=0 );
   height: 100%;
   width: 100%;
-  max-width: 1200px;
+  min-width: 100vw;
+  min-height: 100vh;
+  // max-width: 1200px;
   margin: 0px auto;
 }
 
