--- a/Styles/Search.scss
+++ b/Styles/Search.scss
@@ -2,7 +2,7 @@ $main-color: #4D7EA8;
 
 .Search {
   padding: 10px;
-  margin: -5px 30px 10px 30px;
+  margin: 0px auto;
 
   display: flex;
   flex-wrap: wrap;
@@ -20,7 +20,6 @@ $main-color: #4D7EA8;
     width: calc(100% - 210px);
     font-size: 30px;
     border-radius: 20px 0px 0px 20px;
-    box-shadow: 0px 10px 15px 0px darken($main-color, 60%);
     outline: none;
     padding: 5px 5px 5px 15px;
     transition: 500ms; 
@@ -33,8 +32,8 @@ $main-color: #4D7EA8;
       text-align: center;
       font-weight: bold;
     }
-    &:focus{
-      box-shadow: 0px 5px 7px 0px darken($main-color, 60%);      
+    &:focus {
+      box-shadow: inset 1px 1px 1px 1px black;
     }
   }
 
@@ -44,7 +43,7 @@ $main-color: #4D7EA8;
     margin: 0;
     position: relative;
     li {
-      background-color: rgba(250, 250, 250, 0.9);
+      background-color: rgba(169,193,213,0.85);
       display: inline-block;
       position: absolute;
       padding-left: 5px;
@@ -88,11 +87,44 @@ $main-color: #4D7EA8;
     border: none;
     outline: none;
     background-color: #7198b9;
-    box-shadow: 0px 10px 15px 0px darken($main-color, 60%);
     color: whitesmoke;
     transition: 500ms;
     &:hover {
-      box-shadow: 0px 5px 7px 0px darken($main-color, 60%);
+      background-color: darken(#7198b9, 30%);
+    }
+    &:focus {
+      background-color: darken(#7198b9, 50%);
+    }
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .Search {
+    width: 95%;
+    font-size: 20px;
+    input {
+      width: calc(100% - 150px);
+      font-size: 20px;
+      height: 30px;
+    }
+    button {
+      width: 150px;
+      font-size: 20px;
+    }
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .Search {
+    width: 99%;
+    font-size: 14px;
+    input {
+      width: calc(100% - 120px);
+      font-size: 14px;
+    }
+    button {
+      width: 120px;
+      font-size: 14px;
     }
   }
 }
